--- a/eng/index.html
+++ b/eng/index.html
@@ -442,10 +442,11 @@
 <h2 id="research-outputs">Research Outputs</h2>
 <h3 id="articles">Articles</h3>
 <ol>
-<li><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion[J]. Mech Syst Signal Process 2022;164:108264.(IF=8.934, JCR Q1)</li>
-<li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction[J]. Int J Mech Sci 2017;134:357–69. ( IF=6.772, JCR Q1) </li>
-<li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. Sensors 2021;21:5779. ( IF=3.847,)</li>
-<li><strong>Wang R</strong>, Zhu L, Zhu C. Investigation of Contact Stiffness Model for Joint Surfaces Based on Domain Expansion Factor and Asperity Interaction[J]. Journal of Mechanical Engineering, 2018(19):8. (in Chinese, EI)</li>
+<li><strong>Wang R</strong>, Song Q, Peng Y, et al. A milling tool wear monitoring method with sensing generalization capability. <a href="https://doi.org/10.1016/j.jmsy.2023.02.017">Journal of Manufacturing Systems 2023;68:25-41.</a> (IF=9.498, JCR Q1)</li>
+<li><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion.  <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a>(IF=8.934, JCR Q1)</li>
+<li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> ( IF=6.772, JCR Q1) </li>
+<li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a> ( IF=3.847, JCR Q2)</li>
+<li><strong>Wang R</strong>, Zhu L, Zhu C. Investigation of Contact Stiffness Model for Joint Surfaces Based on Domain Expansion Factor and Asperity Interaction. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">Journal of Mechanical Engineering, 2018;54(19):88-95</a>. (in Chinese, EI)</li>
 </ol>
 <h3 id="patents">Patents</h3>
 <ol>
