--- a/index.html
+++ b/index.html
@@ -441,10 +441,11 @@
 <h2 id="_4">学术成果</h2>
 <h3 id="_5">论文</h3>
 <ol>
-<li><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion[J]. Mech Syst Signal Process 2022;164:108264.(第一作者, IF=8.934, 中科院一区Top期刊, 被引14次)</li>
-<li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction[J]. Int J Mech Sci 2017;134:357–69. (第一作者, IF=6.772, 中科院一区Top期刊, 被引55次) </li>
-<li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. Sensors 2021;21:5779. (第一作者, IF=3.847, 被引12次)</li>
-<li><strong>王润琼</strong>,朱立达,朱春霞.基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. 机械工程学报, 2018(19):8. (第一作者, 被引27次, EI检索)</li>
+<li><strong>Wang R</strong>, Song Q, Peng Y, et al.  A milling tool wear monitoring method with sensing generalization capability[J]. <a href="https://doi.org/10.1016/j.jmsy.2023.02.017">Journal of Manufacturing Systems 2023;68:25-41.</a> (第一作者, IF=9.498, 中科院一区Top期刊)</li>
+<li><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion[J]. <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a> (第一作者, IF=8.934, 中科院一区Top期刊, 被引14次)</li>
+<li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction[J]. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> (第一作者, IF=6.772, 中科院一区Top期刊, 被引56次)</li>
+<li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a>(第一作者, IF=3.847, 被引12次)</li>
+<li><strong>王润琼</strong>,朱立达,朱春霞.基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报, 2018;54(19):88-95.</a> (第一作者, 被引27次, EI检索)</li>
 </ol>
 <h3 id="_6">专利</h3>
 <ol>
