--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
 </ol>
 <h3 id="_6">专利</h3>
 <ol>
+<li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种在线监测薄壁件铣削刀具状态的特征强化方法及系统,ZL202210366357.6. 授权日期:2023-03-14</li>
 <li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种多传感信号融合监测薄壁件铣削数据降维方法及系统,ZL202110179639.0. 授权日期:2022-04-22</li>
 <li><strong>王润琼</strong>,朱立达,倪陈兵等,一种考虑粗糙表面微凸体相互作用影响的确定受载结合部法向接触刚度的方法,ZL201710029431.4. 授权日期：2020-06-16</li>
 <li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种切削信号多域特征高质融合及融合特征性能评价方法,ZL202211156530.6. 申请日期:2022-09-22</li>
-<li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种在线监测薄壁件铣削刀具状态的特征强化方法及系统,ZL202210366357.6. 申请日期:2022-04-08</li>
 </ol>
 <h2 id="_7">荣誉奖项</h2>
 <ul>
