--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 <p>研究方向包括：切削刀具状态监测、智能制造、薄壁件制造系统数字孪生等。</p>
 <h2 id="_2">最新动态</h2>
 <ul>
-<li><a href="/blog/#_2">[2023.02.28] 高速铣削信号特征强化算法论文被一区Top期刊J Manuf Syst录用。</a></li>
+<li><a href="/blog/#_1">[2023.02.28] 薄壁件铣削信号特征强化算法论文被一区Top期刊J Manuf Syst录用。</a></li>
 </ul>
 <h2 id="_3">教育和工作履历</h2>
 <ul>
@@ -444,6 +444,9 @@
 <li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction[J]. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> (第一作者, IF=6.772, 中科院一区Top期刊, 被引56次)</li>
 <li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a>(第一作者, IF=3.847, 被引12次)</li>
 <li><strong>王润琼</strong>,朱立达,朱春霞.基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报, 2018;54(19):88-95.</a> (第一作者, 被引27次, EI检索)</li>
+<li>Peng Y, Song Q, <strong>Wang R</strong>, et al. Intelligent recognition of tool wear in milling based on a single sensor signal[J]. <a href="https://link.springer.com/article/10.1007/s00170-022-10404-y">The International Journal of Advanced Manufacturing Technology 2023;124:1077–1093</a></li>
+<li>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718l[J]. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></li>
+<li>Xue P, Zhu C, <strong>Wang R</strong>, et al. Research on dynamic characteristics of oil-bearing joint surface in slide guidesl[J]. <a href="https://doi.org/10.1080/15397734.2020.1766493">Mechanics Based Design of Structures and Machines 2022;50(6):1893-1913</a></li>
 </ol>
 <h3 id="_6">专利</h3>
 <ol>
