--- a/eng/index.html
+++ b/eng/index.html
@@ -429,7 +429,7 @@
 <p>Runqiong's research interests include cutting tool condition monitoring, intelligent manufacturing, and digital twins of manufacturing systems for thin-walled parts.</p>
 <h2 id="whats-new">What's new</h2>
 <ul>
-<li><a href="/blog/#_3">[2023.02.28] The paper on reinforced fusion algorithms for high-speed milling signal features has been accepted for publication in J Manuf Syst.</a></li>
+<li><a href="/blog/#_1">[2023.02.28] The paper on reinforced fusion algorithms for signal features of  thin-walled parts milling has been accepted for publication in J Manuf Syst.</a></li>
 </ul>
 <h2 id="education-and-working-experience">Education and Working Experience</h2>
 <ul>
@@ -445,6 +445,9 @@
 <li><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> ( IF=6.772, JCR Q1) </li>
 <li><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a> ( IF=3.847, JCR Q2)</li>
 <li><strong>Wang R</strong>, Zhu L, Zhu C. Investigation of Contact Stiffness Model for Joint Surfaces Based on Domain Expansion Factor and Asperity Interaction. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">Journal of Mechanical Engineering, 2018;54(19):88-95</a>. (in Chinese, EI)</li>
+<li>Peng Y, Song Q, <strong>Wang R</strong>, et al. Intelligent recognition of tool wear in milling based on a single sensor signal. <a href="https://link.springer.com/article/10.1007/s00170-022-10404-y">The International Journal of Advanced Manufacturing Technology 2023;124:1077–1093</a></li>
+<li>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718l. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></li>
+<li>Xue P, Zhu C, <strong>Wang R</strong>, et al. Research on dynamic characteristics of oil-bearing joint surface in slide guidesl. <a href="https://doi.org/10.1080/15397734.2020.1766493">Mechanics Based Design of Structures and Machines 2022;50(6):1893-1913</a></li>
 </ol>
 <h3 id="patents">Patents</h3>
 <ol>
