--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                   
 
 
-<p><img title="" src="index_md_files/2173f1c0-b8ed-11ed-8be1-f92f8443c947.jpeg?v=1&type=image&width=240" alt="pic" width="120" data-align="inline"></p>
+<p><img alt="输入图片描述" src="index_md_files/a08bcf20-c3fe-11ed-b73b-ad306e0baa8a.jpeg?v=1&amp;type=image" /></p>
 <h1 id="_1"><strong>王润琼</strong> 博士研究生在读</h1>
 <p>研究方向包括：切削刀具状态监测、智能制造、薄壁件制造系统数字孪生等。</p>
 <h2 id="_2">最新动态</h2>
