--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                   
 
 
-<p><img title="" src="assets/1c96629e8c1130db595f6cd44f53ebc1351286be.jpg" alt="灰色裁剪.jpg" width="155"></p>
+<p><img title="" src="assets/ff73f8618164cbaf5429b6617e42e1cf580afd8d.jpg" alt="202303152121509381.jpg" width="129"></p>
 <h1 id="_1"><strong>王润琼</strong> 博士研究生在读</h1>
 <p>研究方向包括：切削刀具状态监测、智能制造、薄壁件制造系统数字孪生等。</p>
 <h2 id="_2">最新动态</h2>
