--- a/index.html
+++ b/index.html
@@ -459,10 +459,13 @@
 </ol>
 <h2 id="_7">荣誉奖项</h2>
 <ul>
-<li>山东大学机械工程学院优博选育计划</li>
-<li>山东大学博士生课题中期考核优秀奖</li>
-<li>辽宁省优秀硕士学位论文       </li>
-<li>山东大学优秀研究生、东北大学优秀研究生</li>
+<li>山东大学研究生优秀学术成果奖(2023)</li>
+<li>山东大学机械工程学院研究生优秀实践成果奖(2023)</li>
+<li>山东大学创新创业活动先进个人(2023)</li>
+<li>山东大学博士生课题中期考核优秀奖(2021)</li>
+<li>山东大学机械工程学院优博选育计划(2020)</li>
+<li>山东大学优秀研究生(2021/2022)</li>
+<li>辽宁省优秀硕士学位论文(2019)       </li>
 </ul>
 <h2 id="_8">联系方式</h2>
 <ul>
