--- a/index.html
+++ b/index.html
@@ -497,13 +497,13 @@
 <h2 id="_2">最新动态</h2>
 <ul>
 <li>[2023.10.20] 荣获2023年度博士研究生国家奖学金</li>
-<li>[2023.06.07] 荣获2023年度山东大学研究生优秀成果奖（学院唯一获奖）</li>
+<li>[2023.06.07] 荣获2023年度山东大学研究生优秀成果奖</li>
 <li><a href="/blog/#_1">[2023.03.17] 铣削刀具状态自主监测模型论文被1区Top期刊Mech Syst Signal Pr录用。</a></li>
 </ul>
 <h2 id="_3">教育和工作履历</h2>
 <ul>
 <li>
-<p>2023.10~至今，新西兰奥克兰大学，联合培养博士生（国家留学基金委公派）</p>
+<p>2023.10~至今，新西兰奥克兰大学，公派联合培养博士生</p>
 </li>
 <li>
 <p>2020.09~至今，山东大学，机械工程专业，博士研究生</p>
@@ -572,7 +572,7 @@
 <h2 id="_9">荣誉奖项</h2>
 <ul>
 <li>博士研究生国家奖学金(2023)</li>
-<li>山东大学研究生优秀学术成果奖(2023)</li>
+<li>山东大学研究生优秀学术成果奖(2023，学院唯一获奖)</li>
 <li>山东大学机械工程学院研究生优秀实践成果奖(2023)</li>
 <li>山东大学创新创业活动先进个人(2023)</li>
 <li>山东大学博士生课题中期考核优秀奖(2021)</li>
