--- a/cv/index.html
+++ b/cv/index.html
@@ -497,9 +497,9 @@
 <p>Runqiong's research interests include tool condition monitoring for thin-walled parts cutting, intelligent manufacturing, and digital twins of manufacturing systems.</p>
 <h2 id="whats-new">What's new</h2>
 <ul>
+<li><a href="../research/#_1">[2024.01.16] Paper has been accepted for publication in Robot Cim-int Manuf</a></li>
 <li>[2023.10.20] Awarded the National Scholarship for Doctoral Students</li>
 <li>[2023.06.07] Awarded the Outstanding Research Achievement for Graduate Students at SDU (the sole recipient from the department)</li>
-<li><a href="../research/#_1">[2023.03.17] Paper on autonomous model for milling tool condition monitoring has been accepted for publication in Mech Syst Signal Pr</a></li>
 </ul>
 <h2 id="education-and-working-experience">Education and Working Experience</h2>
 <ul>
@@ -513,6 +513,9 @@
 <h3 id="articles">Articles</h3>
 <h4 id="first-author">First author</h4>
 <ol>
+<li>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">Robot Comput-Integr Manuf 2024;88:102723 </a>(IF=10.4, JCR Q1)</p>
+</li>
 <li>
 <p><strong>Wang R</strong>, Song Q, Peng Y, et al.  Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=8.4, JCR Q1)</p>
 </li>
