--- a/index.html
+++ b/index.html
@@ -491,14 +491,20 @@
                   
 
 
-<p><img title="" src="assets/ff73f8618164cbaf5429b6617e42e1cf580afd8d.jpg" alt="202303152121509381.jpg" width="128"></p>
+<p><img title="" src="index_md_files/a85f38e0-b4e4-11ee-8062-5532ca9d996f.jpeg?v=1&type=image" alt="" style="zoom:13%;"></p>
 <h1 id="_1"><strong>王润琼</strong> 博士研究生在读</h1>
 <p>研究方向包括：薄壁件切削刀具状态监测、智能制造、制造系统数字孪生等。</p>
 <h2 id="_2">最新动态</h2>
 <ul>
-<li>[2023.10.20] 荣获2023年度博士研究生国家奖学金</li>
-<li>[2023.06.07] 荣获2023年度山东大学研究生优秀成果奖</li>
-<li><a href="research/#_1">[2023.03.17] 铣削刀具状态自主监测模型论文被1区Top期刊Mech Syst Signal Pr录用。</a></li>
+<li>
+<p><a href="research/#_1">[2024.01.16] 论文被中科院 1 区 Top 期刊 Robot Cim-int Manuf 录用</a></p>
+</li>
+<li>
+<p>[2023.10.20] 荣获 2023 年度博士研究生国家奖学金</p>
+</li>
+<li>
+<p>[2023.06.07] 荣获 2023 年度山东大学研究生优秀成果奖</p>
+</li>
 </ul>
 <h2 id="_3">教育和工作履历</h2>
 <ul>
@@ -523,13 +529,16 @@
 <h4 id="_6">一作论文</h4>
 <ol>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al.  Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode[J]. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=8.4, 中科院1区Top期刊)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">Robot Comput-Integr Manuf 2024;88:102723 </a>(IF=10.4, 中科院 1 区 Top 期刊)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al.  A milling tool wear monitoring method with sensing generalization capability[J]. <a href="https://doi.org/10.1016/j.jmsy.2023.02.017">Journal of Manufacturing Systems 2023;68:25-41.</a> (IF=12.1, 中科院1区Top期刊)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al. Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode[J]. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=8.4, 中科院 1 区 Top 期刊)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion[J]. <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a> (IF=8.4, 中科院1区Top期刊)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al. A milling tool wear monitoring method with sensing generalization capability[J]. <a href="https://doi.org/10.1016/j.jmsy.2023.02.017">Journal of Manufacturing Systems 2023;68:25-41.</a> (IF=12.1, 中科院 1 区 Top 期刊)</p>
+</li>
+<li>
+<p><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion[J]. <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a> (IF=8.4, 中科院 1 区 Top 期刊)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a>(IF=3.9)</p>
@@ -538,10 +547,10 @@
 <p><strong>王润琼</strong>, 宋清华, 彭业振等. 基于特征自适应融合和集成学习的高性能铣削刀具状态监测[J/OL]. <a href="https://kns.cnki.net/kcms2/detail/11.2187.TH.20230719.0921.002.html">机械工程学报,2023-07-19</a></p>
 </li>
 <li>
-<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报, 2018;54(19):88-95.</a> (EI检索)</p>
+<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报, 2018;54(19):88-95.</a> (EI 检索)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal  contact stiffness for mechanical joint considering asperity interaction[J]. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> (IF=7.3 中科院1区Top期刊)</p>
+<p><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal contact stiffness for mechanical joint considering asperity interaction[J]. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> (IF=7.3 中科院 1 区 Top 期刊)</p>
 </li>
 </ol>
 <h4 id="_7">合作论文</h4>
@@ -561,33 +570,75 @@
 </ol>
 <h3 id="_8">申请专利</h3>
 <ol>
-<li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种在线监测薄壁件铣削刀具状态的特征强化方法及系统,ZL202210366357.6. 授权日期:2023-03-14</li>
-<li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种多传感信号融合监测薄壁件铣削数据降维方法及系统,ZL202110179639.0. 授权日期:2022-04-22</li>
-<li><strong>王润琼</strong>,朱立达,倪陈兵等,一种考虑粗糙表面微凸体相互作用影响的确定受载结合部法向接触刚度的方法,ZL201710029431.4. 授权日期：2020-06-16</li>
-<li>宋清华(导师第一),<strong>王润琼</strong>,刘战强等,一种切削信号多域特征高质融合及融合特征性能评价方法,202211156530.6. 申请日期:2022-09-22</li>
-<li>宋清华(导师第一),<strong>王润琼</strong>,彭业振等,考虑刀具实时状态的铣削表面粗糙度在线监测方法及系统, 2023113508035. 申请日期:2023-10-18</li>
-<li>宋清华(导师第一),<strong>王润琼</strong>,彭业振等,基于多域特征行为规律表征的刀具磨损监测方法及系统,2023108305952. 申请日期:2023-07-07</li>
-<li>宋清华(导师第一),彭业振,<strong>王润琼</strong>等，一种铣削刀具磨损状态识别方法、系统、介质及设备,2023109816974. 申请日期:2023-08-04</li>
+<li>
+<p>宋清华(导师第一), <strong>王润琼</strong>, 刘战强等, 一种在线监测薄壁件铣削刀具状态的特征强化方法及系统,ZL202210366357.6. 授权日期:2023-03-14</p>
+</li>
+<li>
+<p>宋清华(导师第一), <strong>王润琼</strong>, 刘战强等, 一种多传感信号融合监测薄壁件铣削数据降维方法及系统,ZL202110179639.0. 授权日期:2022-04-22</p>
+</li>
+<li>
+<p><strong>王润琼</strong>, 朱立达, 倪陈兵等, 一种考虑粗糙表面微凸体相互作用影响的确定受载结合部法向接触刚度的方法,ZL201710029431.4. 授权日期：2020-06-16</p>
+</li>
+<li>
+<p>宋清华(导师第一), <strong>王润琼</strong>, 刘战强等, 一种切削信号多域特征高质融合及融合特征性能评价方法,202211156530.6. 申请日期:2022-09-22</p>
+</li>
+<li>
+<p>宋清华(导师第一), <strong>王润琼</strong>, 彭业振等, 考虑刀具实时状态的铣削表面粗糙度在线监测方法及系统, 2023113508035. 申请日期:2023-10-18</p>
+</li>
+<li>
+<p>宋清华(导师第一), <strong>王润琼</strong>, 彭业振等, 基于多域特征行为规律表征的刀具磨损监测方法及系统,2023108305952. 申请日期:2023-07-07</p>
+</li>
+<li>
+<p>宋清华(导师第一), 彭业振, <strong>王润琼</strong>等, 一种铣削刀具磨损状态识别方法、系统、介质及设备,2023109816974. 申请日期:2023-08-04</p>
+</li>
 </ol>
 <h2 id="_9">荣誉奖项</h2>
 <ul>
-<li>博士研究生国家奖学金(2023)</li>
-<li>山东大学研究生优秀学术成果奖(2023，学院唯一获奖)</li>
-<li>山东大学机械工程学院研究生优秀实践成果奖(2023)</li>
-<li>山东大学创新创业活动先进个人(2023)</li>
-<li>山东大学博士生课题中期考核优秀奖(2021)</li>
-<li>山东大学机械工程学院优博选育计划(2020)</li>
-<li>山东大学优秀研究生(2021, 2022, 2023)</li>
-<li>辽宁省优秀硕士学位论文(2019)       </li>
+<li>
+<p>博士研究生国家奖学金(2023)</p>
+</li>
+<li>
+<p>山东大学研究生优秀学术成果奖(2023，学院唯一获奖)</p>
+</li>
+<li>
+<p>山东大学机械工程学院研究生优秀实践成果奖(2023)</p>
+</li>
+<li>
+<p>山东大学创新创业活动先进个人(2023)</p>
+</li>
+<li>
+<p>山东大学博士生课题中期考核优秀奖(2021)</p>
+</li>
+<li>
+<p>山东大学机械工程学院优博选育计划(2020)</p>
+</li>
+<li>
+<p>山东大学优秀研究生(2021, 2022, 2023)</p>
+</li>
+<li>
+<p>辽宁省优秀硕士学位论文(2019)</p>
+</li>
 </ul>
 <h2 id="_10">联系方式</h2>
 <ul>
-<li>邮箱：rqwang@mail.sdu.edu.cn </li>
-<li>Scopus: <a href="https://www.scopus.com/authid/detail.uri?authorId=57196344713">57196344713</a></li>
-<li>ORCID: <a href="https://orcid.org/0000-0001-6142-6054">0000-0001-6142-6054</a></li>
-<li>ResearchGate: <a href="https://www.researchgate.net/profile/Runqiong-Wang">Runqiong Wang</a></li>
-<li>Web of Science ResearcherID: <a href="https://www.webofscience.com/wos/author/record/HLW-0016-2023">HLW-0016-2023</a></li>
-<li>Google Scholar: <a href="https://scholar.google.com/citations?user=ez-1Xx4AAAAJ&amp;hl">Runqiong Wang</a></li>
+<li>
+<p>邮箱：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;">&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;</a></p>
+</li>
+<li>
+<p>Scopus: <a href="https://www.scopus.com/authid/detail.uri?authorId=57196344713">57196344713</a></p>
+</li>
+<li>
+<p>ORCID: <a href="https://orcid.org/0000-0001-6142-6054">0000-0001-6142-6054</a></p>
+</li>
+<li>
+<p>ResearchGate: <a href="https://www.researchgate.net/profile/Runqiong-Wang">Runqiong Wang</a></p>
+</li>
+<li>
+<p>Web of Science ResearcherID: <a href="https://www.webofscience.com/wos/author/record/HLW-0016-2023">HLW-0016-2023</a></p>
+</li>
+<li>
+<p>Google Scholar: <a href="https://scholar.google.com/citations?user=ez-1Xx4AAAAJ&amp;hl">Runqiong Wang</a></p>
+</li>
 </ul>
 
 
