--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
 <p><img title="" src="index_md_files/a85f38e0-b4e4-11ee-8062-5532ca9d996f.jpeg?v=1&type=image" alt="" style="zoom:13%;"></p>
 <h1 id="_1"><strong>王润琼</strong> 博士研究生在读</h1>
-<p>研究方向包括：薄壁件切削刀具状态监测、智能制造、制造系统数字孪生等。</p>
+<p>研究方向包括：加工过程智能监测、云边协同制造、制造系统数字孪生。</p>
 <h2 id="_2">最新动态</h2>
 <ul>
 <li>
