--- a/cv/index.html
+++ b/cv/index.html
@@ -514,7 +514,7 @@
 <h4 id="first-author">First author</h4>
 <ol>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">Robot Comput-Integr Manuf 2024;88:102723 </a>(IF=10.4, JCR Q1)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">_Robotics and Computer-Integrated Manufacturing_2024;88:102723 </a>(IF=10.4, JCR Q1)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Song Q, Peng Y, et al.  Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=8.4, JCR Q1)</p>
@@ -529,7 +529,7 @@
 <p><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a> ( IF=3.9, JCR Q2)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al. Tool Condition Monitoring for High Performance Milling Based on Feature Adaptive Fusion and Ensemble Learning. <a href="https://kns.cnki.net/kcms2/detail/11.2187.TH.20230719.0921.002.html">Journal of Mechanical Engineering, 2023-07-19</a>. (in Chinese, EI)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al. Tool Condition Monitoring for High Performance Milling Based on Feature Adaptive Fusion and Ensemble Learning. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2024.01.149">Journal of Mechanical Engineering, 2024;60(1):149-158</a>. (in Chinese, EI)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Zhu L, Zhu C. Investigation of Contact Stiffness Model for Joint Surfaces Based on Domain Expansion Factor and Asperity Interaction. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">Journal of Mechanical Engineering, 2018;54(19):88-95</a>. (in Chinese, EI)</p>
