--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 <h4 id="_6">一作论文</h4>
 <ol>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">Robot Comput-Integr Manuf 2024;88:102723 </a>(IF=10.4, 中科院 1 区 Top 期刊)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al.Toward digital twins for high-performance manufacturing: Tool wear monitoring in high-speed milling of thin-walled parts using domain knowledge, <a href="https://doi.org/10.1016/j.rcim.2024.102723">Robotics and Computer-Integrated Manufacturing 2024;88:102723 </a>(IF=10.4, 中科院 1 区 Top 期刊)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Song Q, Peng Y, et al. Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode[J]. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=8.4, 中科院 1 区 Top 期刊)</p>
@@ -544,10 +544,10 @@
 <p><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts[J]. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a>(IF=3.9)</p>
 </li>
 <li>
-<p><strong>王润琼</strong>, 宋清华, 彭业振等. 基于特征自适应融合和集成学习的高性能铣削刀具状态监测[J/OL]. <a href="https://kns.cnki.net/kcms2/detail/11.2187.TH.20230719.0921.002.html">机械工程学报,2023-07-19</a></p>
+<p><strong>王润琼</strong>, 宋清华, 彭业振等. 基于特征自适应融合和集成学习的高性能铣削刀具状态监测[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2024.01.149">机械工程学报 2024;60(1):149-158.</a></p>
 </li>
 <li>
-<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报, 2018;54(19):88-95.</a> (EI 检索)</p>
+<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报 2018;54(19):88-95.</a> </p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal contact stiffness for mechanical joint considering asperity interaction[J]. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> (IF=7.3 中科院 1 区 Top 期刊)</p>
