--- a/cv/index.html
+++ b/cv/index.html
@@ -533,15 +533,15 @@
                   
 
 
-<h1 id="runqiong-wang-phd-student"><strong>Runqiong Wang</strong>  Ph.D. Student</h1>
+<h1 id="runqiong-wang-phd-student"><strong>Runqiong Wang</strong> Ph.D. Student</h1>
 <p>My research interests include tool condition monitoring for thin-walled parts cutting, intelligent manufacturing, and digital twins of manufacturing systems.</p>
 <h2 id="whats-new">What's new</h2>
 <ul>
 <li>
-<p>[2024.11.15] Paper has been accepted for publication in Int J Mech Sci</p>
+<p><a href="../research/#_1">[2024.11.15] Paper has been accepted for publication in Int J Mech Sci</a></p>
 </li>
 <li>
-<p><a href="../research/#_1">[2024.01.16] Paper has been accepted for publication in Robot Cim-int Manuf</a></p>
+<p><a href="../research/#_2">[2024.01.16] Paper has been accepted for publication in Robot Cim-int Manuf</a></p>
 </li>
 <li>
 <p>[2023.10.20] Awarded the National Scholarship for Doctoral Students</p>
@@ -549,11 +549,21 @@
 </ul>
 <h2 id="education-and-working-experience">Education and Working Experience</h2>
 <ul>
-<li>2020.09~2024.12, Ph.D. Student, School of Mechanical Engineering, Shandong University</li>
-<li>2023.10~2024.10, Visiting Ph.D. Student, Department of Mechanical and Mechatronics Engineering, University of Auckland</li>
-<li>2018.08~2020.08, Mechanical Engineer, Hyundai Motor R&amp;D Center (China)</li>
-<li>2015.09~2018.01, M.E., Northeastern University (China)</li>
-<li>2011.09~2015.06, B.E. &amp; B.A., Ludong University</li>
+<li>
+<p>2020.09~2024.12, Ph.D. Student, School of Mechanical Engineering, Shandong University</p>
+</li>
+<li>
+<p>2023.10~2024.10, Visiting Ph.D. Student, Department of Mechanical and Mechatronics Engineering, University of Auckland</p>
+</li>
+<li>
+<p>2018.08~2020.08, Mechanical Engineer, Hyundai Motor R\&amp;D Center (China)</p>
+</li>
+<li>
+<p>2015.09~2018.01, M.E., Northeastern University (China)</p>
+</li>
+<li>
+<p>2011.09~2015.06, B.E. &amp; B.A., Ludong University</p>
+</li>
 </ul>
 <h2 id="research-outputs">Research Outputs</h2>
 <h3 id="articles">Articles</h3>
@@ -569,16 +579,16 @@
 <p><strong>Wang R</strong>, Song Q, Peng Y, et al. A milling tool wear monitoring method with sensing generalization capability. <a href="https://doi.org/10.1016/j.jmsy.2023.02.017">Journal of Manufacturing Systems 2023;68:25-41.</a> (IF=12.2, JCR Q1)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Peng Y, et al.  Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=7.9, JCR Q1)</p>
+<p><strong>Wang R</strong>, Song Q, Peng Y, et al. Self-adaptive fusion of local-temporal features for tool condition monitoring: A human experience free mode. <a href="https://doi.org/10.1016/j.ymssp.2023.110310">Mechanical Systems and Signal Processing 2023;195:110310.</a> (IF=7.9, JCR Q1)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion.  <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a>(IF=7.9, JCR Q1)</p>
+<p><strong>Wang R</strong>, Song Q, Liu Z, et al. Multi-condition identification in milling Ti-6Al-4V thin-walled parts based on sensor fusion. <a href="https://doi.org/10.1016/j.ymssp.2021.108264">Mechanical Systems and Signal Processing 2022;164:108264.</a>(IF=7.9, JCR Q1)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Zhu L, Zhu C. Research on fractal model of normal contact stiffness for mechanical joint considering asperity interaction. <a href="https://doi.org/10.1016/j.ijmecsci.2017.10.019">International Journal of Mechanical Sciences 2017;134:357–69. </a> ( IF=7.1, JCR Q1)</p>
 </li>
 <li>
-<p><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a> ( IF=3.4, JCR Q2)</p>
+<p><strong>Wang R</strong>, Song Q, Liu Z, et al. A Novel Unsupervised Machine Learning-Based Method for Chatter Detection in the Milling of Thin-Walled Parts. <a href="https://doi.org/10.3390/s21175779">Sensors 2021;21:5779. </a> ( IF\=3.4, JCR Q2)</p>
 </li>
 <li>
 <p><strong>Wang R</strong>, Song Q, Peng Y, et al. Tool Condition Monitoring for High Performance Milling Based on Feature Adaptive Fusion and Ensemble Learning. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2024.01.149">Journal of Mechanical Engineering, 2024;60(1):149-158</a>. (in Chinese, EI)</p>
@@ -596,7 +606,7 @@
 <p>Peng Y, Song Q, <strong>Wang R</strong>, et al. Intelligent recognition of tool wear in milling based on a single sensor signal. <a href="https://link.springer.com/article/10.1007/s00170-022-10404-y">The International Journal of Advanced Manufacturing Technology 2023;124:1077–1093</a></p>
 </li>
 <li>
-<p>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718l. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></p>
+<p>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></p>
 </li>
 <li>
 <p>Xue P, Zhu C, <strong>Wang R</strong>, et al. Research on dynamic characteristics of oil-bearing joint surface in slide guidesl. <a href="https://doi.org/10.1080/15397734.2020.1766493">Mechanics Based Design of Structures and Machines 2022;50(6):1893-1913</a></p>
@@ -604,28 +614,60 @@
 </ol>
 <h3 id="patents">Patents</h3>
 <ol>
-<li>Song Q, <strong>Wang R</strong>, Liu Z, et al. Characteristic strengthening method and system for on-line monitoring of state of milling cutter of thin-wall part. CN202210366357.6. 2023-03-14</li>
-<li>Song Q, <strong>Wang R</strong>, Liu Z, et al. Multi-sensing-signal fusion monitoring thin-wall part milling data dimension reduction method and system. CN202110179639.0. 2022-04-22</li>
-<li><strong>Wang R,</strong> Zhu L, Ni C, et al. Method for determining normal contact rigidity of loaded joint part by considering interaction effect of micro-bulges on rough surfaces. CN201710029431.4. 2020-06-16</li>
-<li>Song Q, <strong>Wang R</strong>, Liu Z, et al. Cutting signal multi-domain feature high-quality fusion and fusion feature performance evaluation method, CN202211156530.6. 2022-09-22</li>
+<li>
+<p>Song Q, <strong>Wang R</strong>, Liu Z, et al. Characteristic strengthening method and system for on-line monitoring of state of milling cutter of thin-wall part. CN202210366357.6. 2023-03-14</p>
+</li>
+<li>
+<p>Song Q, <strong>Wang R</strong>, Liu Z, et al. Multi-sensing-signal fusion monitoring thin-wall part milling data dimension reduction method and system. CN202110179639.0. 2022-04-22</p>
+</li>
+<li>
+<p><strong>Wang R,</strong> Zhu L, Ni C, et al. Method for determining normal contact rigidity of loaded joint part by considering interaction effect of micro-bulges on rough surfaces. CN201710029431.4. 2020-06-16</p>
+</li>
+<li>
+<p>Song Q, <strong>Wang R</strong>, Liu Z, et al. Cutting signal multi-domain feature high-quality fusion and fusion feature performance evaluation method, CN202211156530.6. 2022-09-22</p>
+</li>
 </ol>
 <h2 id="awards">Awards</h2>
 <ul>
-<li>National Scholarship for Doctoral Students</li>
-<li>Outstanding Research Achievement Award for Graduate Students, Shandong University</li>
-<li>Excellent Doctoral Training Plan of School of Mechanical Engineering, Shandong University</li>
-<li>Excellent Award for Mid-term Assessment of Doctoral Project, Shandong University</li>
-<li>Excellent Master's Thesis of Liaoning Province, Selected by Liaoning Province Education Department     </li>
-<li>Excellent graduate student, SDU &amp; NEU</li>
+<li>
+<p>National Scholarship for Doctoral Students</p>
+</li>
+<li>
+<p>Outstanding Research Achievement Award for Graduate Students, Shandong University</p>
+</li>
+<li>
+<p>Excellent Doctoral Training Plan of School of Mechanical Engineering, Shandong University</p>
+</li>
+<li>
+<p>Excellent Award for Mid-term Assessment of Doctoral Project, Shandong University</p>
+</li>
+<li>
+<p>Excellent Master's Thesis of Liaoning Province, Selected by Liaoning Province Education Department</p>
+</li>
+<li>
+<p>Excellent graduate student, SDU &amp; NEU</p>
+</li>
 </ul>
 <h2 id="contact">Contact</h2>
 <ul>
-<li>E-mail: rqwang@mail.sdu.edu.cn</li>
-<li>Scopus: <a href="https://www.scopus.com/authid/detail.uri?authorId=57196344713">57196344713</a></li>
-<li>ORCID: <a href="https://orcid.org/0000-0001-6142-6054">0000-0001-6142-6054</a></li>
-<li>ResearchGate: <a href="https://www.researchgate.net/profile/Runqiong-Wang">Runqiong Wang</a></li>
-<li>Web of Science ResearcherID: <a href="https://www.webofscience.com/wos/author/record/HLW-0016-2023">HLW-0016-2023</a></li>
-<li>Google Scholar: <a href="https://scholar.google.com/citations?user=ez-1Xx4AAAAJ&amp;hl">Runqiong Wang</a></li>
+<li>
+<p>E-mail: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;">&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;</a></p>
+</li>
+<li>
+<p>Scopus: <a href="https://www.scopus.com/authid/detail.uri?authorId=57196344713">57196344713</a></p>
+</li>
+<li>
+<p>ORCID: <a href="https://orcid.org/0000-0001-6142-6054">0000-0001-6142-6054</a></p>
+</li>
+<li>
+<p>ResearchGate: <a href="https://www.researchgate.net/profile/Runqiong-Wang">Runqiong Wang</a></p>
+</li>
+<li>
+<p>Web of Science ResearcherID: <a href="https://www.webofscience.com/wos/author/record/HLW-0016-2023">HLW-0016-2023</a></p>
+</li>
+<li>
+<p>Google Scholar: <a href="https://scholar.google.com/citations?user=ez-1Xx4AAAAJ&amp;hl">Runqiong Wang</a></p>
+</li>
 </ul>
 
 
