--- a/index.html
+++ b/index.html
@@ -531,16 +531,16 @@
                   
 
 
-<p><img title="" src="index_md_files/a85f38e0-b4e4-11ee-8062-5532ca9d996f.jpeg?v=1&type=image" alt="" style="zoom:13%;"></p>
+<p><img title="" src="index_md_files/63e63b00-b4e4-11ee-8062-5532ca9d996f.jpeg" alt="" style="zoom:67%;"> </p>
 <h1 id="_1"><strong>王润琼</strong> 博士研究生在读</h1>
 <p>研究方向包括：加工过程智能监测、云边协同制造、制造系统数字孪生。</p>
 <h2 id="_2">最新动态</h2>
 <ul>
 <li>
-<p>[2024.11.15] 论文被中科院1区Top期刊 Int J Mech Sci 录用</p>
+<p><a href="research/#_1">[2024.11.15] 论文被中科院 1 区 Top 期刊 Int J Mech Sci 录用</a></p>
 </li>
 <li>
-<p><a href="research/#_1">[2024.01.16] 论文被中科院 1 区 Top 期刊 Robot Cim-int Manuf 录用</a></p>
+<p><a href="research/#_2">[2024.01.16] 论文被中科院 1 区 Top 期刊 Robot Cim-int Manuf 录用</a></p>
 </li>
 <li>
 <p>[2023.10.20] 荣获 2023 年度博士研究生国家奖学金</p>
@@ -593,7 +593,7 @@
 <p><strong>王润琼</strong>, 宋清华, 彭业振等. 基于特征自适应融合和集成学习的高性能铣削刀具状态监测[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2024.01.149">机械工程学报 2024;60(1):149-158.</a></p>
 </li>
 <li>
-<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报 2018;54(19):88-95.</a> </p>
+<p><strong>王润琼</strong>, 朱立达, 朱春霞. 基于域扩展因子和微凸体相互作用的结合面接触刚度模型研究[J]. <a href="http://www.cjmenet.com.cn/CN/10.3901/JME.2018.19.088">机械工程学报 2018;54(19):88-95.</a></p>
 </li>
 </ol>
 <h4 id="_7">合作论文</h4>
@@ -605,7 +605,7 @@
 <p>Peng Y, Song Q, <strong>Wang R</strong>, et al. Intelligent recognition of tool wear in milling based on a single sensor signal[J]. <a href="https://link.springer.com/article/10.1007/s00170-022-10404-y">The International Journal of Advanced Manufacturing Technology 2023;124:1077–1093</a></p>
 </li>
 <li>
-<p>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718l[J]. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></p>
+<p>Ji H, Song Q, <strong>Wang R</strong>, et al. Evaluation and prediction of pore effects on single-crystal mechanical and damage properties of selective laser melted Inconel-718[J]. <a href="https://doi.org/10.1016/j.matdes.2022.110807">Materials &amp; Design 2022;219:110807</a></p>
 </li>
 <li>
 <p>Xue P, Zhu C, <strong>Wang R</strong>, et al. Research on dynamic characteristics of oil-bearing joint surface in slide guidesl[J]. <a href="https://doi.org/10.1080/15397734.2020.1766493">Mechanics Based Design of Structures and Machines 2022;50(6):1893-1913</a></p>
