--- a/cv/index.html
+++ b/cv/index.html
@@ -550,7 +550,10 @@
 <h2 id="education-and-working-experience">Education and Working Experience</h2>
 <ul>
 <li>
-<p>2020.09~2024.12, Ph.D. Student, School of Mechanical Engineering, Shandong University</p>
+<p>2025.03~Now, Associate Professor, College of Electromechanical Engineering, Qingdao University of Science and Technology</p>
+</li>
+<li>
+<p>2020.09~2024.12, Ph.D., School of Mechanical Engineering, Shandong University</p>
 </li>
 <li>
 <p>2023.10~2024.10, Visiting Ph.D. Student, Department of Mechanical and Mechatronics Engineering, University of Auckland</p>
