--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 <h2 id="_11">联系方式</h2>
 <ul>
 <li>
-<p>邮箱：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;">&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#109;&#97;&#105;&#108;&#46;&#115;&#100;&#117;&#46;&#101;&#100;&#117;&#46;&#99;&#110;</a></p>
+<p>邮箱：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#113;&#117;&#115;&#116;&#46;&#101;&#100;&#117;&#46;&#99;&#110;">&#114;&#113;&#119;&#97;&#110;&#103;&#64;&#113;&#117;&#115;&#116;&#46;&#101;&#100;&#117;&#46;&#99;&#110;</a></p>
 </li>
 <li>
 <p>Scopus: <a href="https://www.scopus.com/authid/detail.uri?authorId=57196344713">57196344713</a></p>
